plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.sports'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.5.0'
    implementation 'com.h2database:h2'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swagger

    implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'
    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'com.opencsv:opencsv:5.5.2' // opencsv


    // Spring Boot Logging
    implementation 'org.springframework.boot:spring-boot-starter-logging:3.3.5'

    // Logback
    implementation 'ch.qos.logback:logback-classic:1.4.8'

    // SLF4J
    implementation 'org.slf4j:slf4j-api:2.0.7'

    implementation 'com.googlecode.json-simple:json-simple:1.1' // json-simple
}

tasks.test {
    enabled = false
}
